--- a/recipes/basicburger.html
+++ b/recipes/basicburger.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>The Perfect Basic Burger</title>
 </head>
 <body>
     <h1>Basic Burger</h1>
-    <img src="images/basicburger.jpg" alt="Basic Burger" style="width:200px;height:200px;">
+    <img src="images/basicburger.jpg" alt="Basic Burger" clas="pic">
     <h2>Description</h2>
     <p>Need a basic burger recipe that you can whip up in no time? We have the perfect one. With just 5 ingredients and 15 minutes of cooking time, this flavorful recipe is ready to be shared, topped, and sauced in any way you like! Learn how to make your own sizzling beef burger patties right here. </p> </p>
     <h2>Ingredients</h2>
