--- a/recipes/chickenbreast.html
+++ b/recipes/chickenbreast.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Chicken Breast</title>
 </head>
 <body>
     <h1>Chicken Breast</h1>
-    <img src="images/chickenbreast.jpg" alt="Chicken Breast Picture" style="width:200px;height:200px;">
+    <img src="images/chickenbreast.jpg" class="pic" alt="Chicken Breast Picture">
     <h2>Description</h2>
     <p>Everyone needs a tried-and-true recipe for simple baked chicken in their back pocket. On the hunt for the perfect one? We've got you covered with this top-rated recipe for baked chicken breasts. It's versatile, universally crowd-pleasing, and (best of all) incredibly easy. </p>
     <h2>Ingredients</h2>
