--- a/recipes/turkishpasta.html
+++ b/recipes/turkishpasta.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Turkish Pasta</title>
 </head>
 <body>
     <h1>Turkish Pasta</h1>
-    <img src="images/turkishpasta.jpg" alt="Turkish Pasta Picture" style="width:200px;height:200px;">
+    <img src="images/turkishpasta.jpg" alt="Turkish Pasta Picture" class="pic">
     <h2>Description</h2>
     <p>This Turkish pasta recipe features a sweet paprika yogurt sauce, ground round, and fusilli pasta. </p>
     <h2>Ingredients</h2>
